--- a/templates/admin_dash.html
+++ b/templates/admin_dash.html
@@ -35,7 +35,7 @@
 
 <div class="button-container">
     <!-- Create Class Button -->
-    <a href='add_teacher.html'>
+    <a href="{% url 'add_teachers' %}">
         <button>Add Teacher</button>
     </a>
 
