--- a/templates/add_teacher.html
+++ b/templates/add_teacher.html
@@ -56,13 +56,13 @@
     <form action="{% url 'add_teachers' %}" method="post" id="teacherSignupForm">
         {% csrf_token %}
         <div class="form-group">
-            <label for="firstName">First Name:</label>
-            <input type="text" id="first_name" name="firstName" required>
+            <label for="first_name">First Name:</label>
+            <input type="text" id="first_name" name="first_name" required>
         </div>
 
         <div class="form-group">
-            <label for="lastName">Last Name:</label>
-            <input type="text" id="last_name" name="lastName" required>
+            <label for="last_name">Last Name:</label>
+            <input type="text" id="last_name" name="last_name" required>
         </div>
 
         <div class="form-group">
@@ -76,13 +76,13 @@
         </div>
 
         <div class="form-group">
-            <label for="phoneNumber">Phone Number:</label>
-            <input type="tel" id="phone_number" name="phoneNumber" required>
+            <label for="phone_number">Phone Number:</label>
+            <input type="tel" id="phone_number" name="phone_number" required>
         </div>
 
         <div class="form-group">
-            <label for="idNumber">ID Number:</label>
-            <input type="text" id="id_number" name="idNumber" required>
+            <label for="id_number">ID Number:</label>
+            <input type="text" id="id_number" name="id_number" required>
         </div>
 
         <div class="form-group">
