--- a/templates/add_classroom.html
+++ b/templates/add_classroom.html
@@ -1,20 +1,20 @@
-<!-- create_student.html -->
+<!-- add_classroom.html -->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Student</title>
+    <title>Add Classroom</title>
 </head>
 <body>
 
-    <h1>Create a New Student</h1>
+    <h1>Add a New Classroom</h1>
 
-    <form method="post" action="{% url 'add_students' %}">
+    <form method="post" action="{% url 'add_classrooms' %}">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Create Student</button>
+        <button type="submit">Add Classroom</button>
     </form>
 
 </body>
