--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -90,7 +90,7 @@
             <input type="password" id="password" name="password" required>
         </div>
 
-        <div class="form-group">
+        {% comment %} <div class="form-group">
             <label for="role">Role:</label>
             <select id="role" name="role" required>
                 <option value="admin">Admin</option>
@@ -98,7 +98,7 @@
                 <option value="teacher">Teacher</option>
                 <option value="parent">Parent</option>
             </select>
-        </div>
+        </div> {% endcomment %}
 
         <div class="form-group">
             <button type="submit">Login</button>
