--- a/templates/add_attendance.html
+++ b/templates/add_attendance.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 
 {% block title %}Add Attendance{% endblock title %}
 
@@ -9,11 +9,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List of Things</title>
+    <title>List of Students</title>
 </head>
 <body>
 
-    <h1>List of Things</h1>
+    <h1>List of Students</h1>
 
     {% if items %}
         <ol>
@@ -46,4 +46,34 @@
 </body>
 </html>
 
-{% endblock content%}
+{% endblock content%} {% endcomment %}
+<!-- add_attendance.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Attendance</title>
+</head>
+<body>
+
+    <h1>Add Attendance</h1>
+
+    <form method="post" action="{% url 'attendance' teacher_id=teacher_id %}">
+        {% csrf_token %}
+        
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date" required>
+        
+        {% for student in items %}
+            <div>
+                <input type="checkbox" id="student_{{ student.id }}" name="student_{{ student.id }}">
+                <label for="student_{{ student.id }}">{{ student.first_name }} {{ student.last_name }}</label>
+            </div>
+        {% endfor %}
+
+        <button type="submit">Submit</button>
+    </form>
+
+</body>
+</html>
