--- a/templates/add_attendance.html
+++ b/templates/add_attendance.html
@@ -53,15 +53,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Attendance</title>
+    <title>Attendance</title>
 </head>
 <body>
 
-    <h1>Add Attendance</h1>
+    <h1>Attendance</h1>
 
     <form method="post" action="{% url 'attendance' teacher_id=teacher_id %}">
         {% csrf_token %}
-        
         <label for="date">Date:</label>
         <input type="date" id="date" name="date" required>
         
