--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,3 @@
-{% extends 'base.html' %}
-
-{% block title %}Log In{% endblock title %}
 
 {% block content %}
 
@@ -17,94 +14,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        .login-container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-
-        input, select {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-            border: 1px solid #3498db; /* Match the border color used for input elements */
-            border-radius: 8px;
-            margin-top: 5px;
-        }
-
-        button {
-            background-color: #4caf50;
-            color: #fff;
-            padding: 10px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-    </style>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/signin.css' %}">
 
 </head>
 <body>
 
-<div class="login-container">
-    <h2>Login</h2>
-        {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    <form action="{% url 'login' %}" method="post" id="loginForm">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="text" id="email" name="email" required>
-        </div>
+    <img src="{% static 'images/church_logo.png' %}" alt="Church logo">
+    <div class="login-container">
+        <h2>Login</h2>
+            {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        <form action="{% url 'login' %}" method="post" id="loginForm">
+            {% csrf_token %}
+            
+                <label for="email">Email:</label>
+                <input type="text" id="email" name="email" required>
+            
 
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
+                
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            
 
-        {% comment %} <div class="form-group">
-            <label for="role">Role:</label>
-            <select id="role" name="role" required>
-                <option value="admin">Admin</option>
-                <option value="pastor">Pastor</option>
-                <option value="teacher">Teacher</option>
-                <option value="parent">Parent</option>
-            </select>
-        </div> {% endcomment %}
+            {% comment %} <div class="form-group">
+                <label for="role">Role:</label>
+                <select id="role" name="role" required>
+                    <option value="admin">Admin</option>
+                    <option value="pastor">Pastor</option>
+                    <option value="teacher">Teacher</option>
+                    <option value="parent">Parent</option>
+                </select>
+            </div> {% endcomment %}
 
-        <div class="form-group">
-            <button type="submit">Login</button>
-        </div>
-    </form>
-</div>
+            
+                <button type="submit">Login</button>
+            
+        </form>
+    </div>
 
 </body>
 </html>
