--- a/templates/add_attendance.html
+++ b/templates/add_attendance.html
@@ -66,7 +66,7 @@
         
         {% for student in items %}
             <div>
-                <input type="checkbox" id="student_{{ student.id }}" name="student_{{ student.id }}">
+                <input type="checkbox" id="student_{{ student.id }}" name="student" value="{{ student.id }}">
                 <label for="student_{{ student.id }}">{{ student.first_name }} {{ student.last_name }}</label>
             </div>
         {% endfor %}
@@ -76,3 +76,37 @@
 
 </body>
 </html>
+{% comment %} <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Attendance</title>
+</head>
+<body>
+
+    <h1>Attendance</h1>
+
+    <form method="post" action="{% url 'attendance' teacher_id=teacher_id %}">
+        {% csrf_token %}
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date" required>
+
+        <!-- Hidden input fields for student and classroom -->
+        {% for student in items %}
+            <input type="hidden" name="student_{{ student.id }}" value="{{ student.id }}">
+            <input type="hidden" name="classroom_{{ student.id }}" value="{{ student.grade.id }}">
+        {% endfor %}
+
+        {% for student in items %}
+            <div>
+                <input type="checkbox" id="{{ student.id }}" name="{{ student.id }}">
+                <label for="{{ student.id }}">{{ student.first_name }} {{ student.last_name }}</label>
+            </div>
+        {% endfor %}
+
+        <button type="submit">Submit</button>
+    </form>
+
+</body>
+</html> {% endcomment %}
